# tvbrowser

CVSROOT/: avail  ciabot_cvs.pl  loginfo
androidtvbrowser/: AndroidManifest.xml  build.xml
pdatvbrowser/: About.Designer.cs  About.resx  Broadcast.cs  Channel.cs  Configuration.cs  Configuration.resx  CustomTVBrowserList.cs  Details.cs  ErrorMessage.cs  IRRemote.Designer.cs  Mainform.Designer.cs  Mainform.cs  Memo.cs  Program.cs  Reminder.cs  Search.cs  Search.resx  SearchElement.cs  SearchStartingAt.Designer.cs  SearchStartingAt.cs  ShowBroadcasts.cs  Sound.cs  TCPTransfer.cs  TVBrowserControll.cs  TVBrowserDate.cs  TVBrowserList.cs  Transfer.Designer.cs  Transfer.cs  conf.csv
pdatvbrowser/languages/: Dansk.txt  English.txt  German.txt
primarydatamanager/: .project
primarydatamanager/tvdatastarterkit/: .project  build.properties  build.xml  pom.xml
trunk/CVSROOT/: avail  checkoutlist  ciabot_cvs.pl  cvsnewsbot_cvs.pl  loginfo
trunk/androidtvbrowser/: AndroidManifest.xml  build.properties  default.properties
trunk/pdatvbrowser/: About.Designer.cs  About.cs  BroadcastComparer.cs  Channel.cs  Configuration.Designer.cs  Configuration.cs  Details.Designer.cs  Details.cs  Details.resx  ErrorMessage.cs  IRRemote.cs  (+14 more)
trunk/tvbrowser/deployment/x11/src/: Makefile.am
trunk/tvbrowser/deployment/x11/src/logger/: Makefile.in  logger.c
tvb-compat/: .classpath  .project  pom.xml
tvbrowser/: ChangeLog.txt  Overview.txt  build.cmd  build.properties  build.sh  build.xml
tvbrowser-lens/: build.xml
tvbrowser-plugins/: Package selected plugin.launch  pom.xml
(+6383 files in other folders)
